tests/negative/neg_own_lifetime.safe
-- Test: neg_own_lifetime
-- Description: Returning a borrowed access value that depends on a local owner.
--   The borrowed access value would outlive the lender's scope once
--   returned from the function.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a:5bc5ab8b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a-a:ae729065
-- Expected: REJECT lifetime_violation

package Lifetime_Test

   type Value is range 0 to 100;
   type Value_Ptr is access Value;

   --  Leak_Borrow: returns a borrow tied to a local owner.
   function Leak_Borrow returns access Value
      Owner : Value_Ptr = new (42 as Value);
      Ref   : access Value = Owner;

      return Ref;  -- ERROR: borrowed value outlives local owner



